# mTLS-Sidecar-Proxy

./: .gitignore  README.md
mtls-proxy/: Cargo.toml
mtls-proxy/examples/: proxy.yaml
mtls-proxy/src/: config.rs  main.rs  mod.rs  proxy.rs  tls.rs
upstream-server/: Cargo.toml
upstream-server/src/: main.rs
