[package]
name     = "mpc-mtls"
version  = "0.1.0"
edition  = "2021"
license  = "Apache-2.0"

# ──────────────────────────
# Runtime dependencies
# ──────────────────────────
[dependencies]
# Async runtime
tokio            = { version = "1.46.1", features = ["full"] }          # :contentReference[oaicite:0]{index=0}

# TLS / mTLS
rustls           = { version = "0.23.22", default-features = false, features = ["std", "tls12"] }  # :contentReference[oaicite:1]{index=1}
tokio-rustls     = { version = "0.26.2" }                                                   # :contentReference[oaicite:2]{index=2}
rustls-pemfile   = "2.2"

# Configuration & CLI
serde            = { version = "1.0", features = ["derive"] }
serde_yaml       = "0.9"
clap             = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow           = "1.0"

# Observability
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }      # :contentReference[oaicite:3]{index=3}

# ──────────────────────────
# Dev & test only
# ──────────────────────────
[dev-dependencies]
tokio-test = "0.4"     # async unit-tests
rcgen      = "0.12"    # generate throw-away test certs
